# Full-Stack-CRUD-API

./: Jenkinsfile  README.md  docker-compose.yml  sonar-project.properties
ansible/: deploy.yml
backend/: .gitignore  Dockerfile  app.py  models.py  pyproject.toml  routes.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: CreateUserModal.jsx  EditModal.jsx  Navbar.jsx  UserCard.jsx  UserGrid.jsx
