[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Maina-M19",email = "maina1999m19@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

